details page working innit